--- a/index.css
+++ b/index.css
@@ -101,6 +101,7 @@ nav .main-nav .logins .sign-up {
 .first-section {
   background: rgb(249, 248, 244);
   padding: 3.4rem clamp(2rem, -15.23rem + 27vw, 9rem) 4.5rem;
+  overflow: hidden;
 }
 
 #top-section {
@@ -122,7 +123,7 @@ nav .main-nav .logins .sign-up {
 
 #top-section .first-article .rating p {
   margin-left: 1rem;
-  font-size: 1.2rem;
+  font-size: 1rem;
   color: rgb(4, 18, 53);
 }
 
@@ -223,6 +224,14 @@ nav .main-nav .logins .sign-up {
   gap: 2rem;
 }
 
+:is(
+    .features .first-feature,
+    .features .second-feature,
+    .features .third-feature
+  ) {
+  max-width: 400px;
+}
+
 .second-section .features .first-feature h3,
 .second-section .features .second-feature h3,
 .second-section .features .third-feature h3 {
@@ -313,7 +322,6 @@ nav .main-nav .logins .sign-up {
   min-width: 31.25rem;
   padding: 1.92rem;
   border-radius: 5px;
-  margin: 0.6rem;
 }
 
 :is(.testimonial-1, .testimonial-2, .testimonial-3) > .profile {
@@ -382,6 +390,11 @@ footer {
 
 footer .info {
   grid-column: 1/3;
+  max-width: 25rem;
+}
+
+:is(footer .sitemap, footer .resources, footer .company, footer .portfolio) {
+  max-width: 9.4rem;
 }
 
 :is(footer .info) > h1 {
@@ -434,6 +447,7 @@ footer .info {
 
   #top-section .first-article h1 {
     margin-bottom: 0.5rem;
+    font-size: 1.8rem;
   }
 
   #top-section .first-article .article-text {
@@ -458,7 +472,82 @@ footer .info {
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1100px) {
+  #top-section .first-article .article-text {
+    font-size: 1rem;
+  }
+
+  #top-section .first-article .trial #free-trial {
+    font-size: 1rem;
+  }
+
+  #top-section .first-article .trial #examples {
+    font-size: 1rem;
+  }
+
+  :is(.first-benefit, .second-benefit) > p {
+    font-size: 1rem;
+  }
+
+  /* SECOND SECTION */
+  .second-section p:first-child {
+    font-size: 1rem;
+  }
+
+  .second-section .features .first-feature h3,
+  .second-section .features .second-feature h3,
+  .second-section .features .third-feature h3 {
+    font-size: 1.14rem;
+  }
+
+  .second-section .features .first-feature p,
+  .second-section .features .second-feature p,
+  .second-section .features .third-feature p {
+    font-size: 1rem;
+  }
+
+  /* THIRD SECTION */
+  .third-section article .third-section-article h2 {
+    font-size: 1.7rem;
+  }
+
+  .third-section article .third-section-article p {
+    font-size: 1rem;
+  }
+
+  .third-section article .third-section-article a {
+    font-size: 1rem;
+  }
+
+  /* FOURTH SECTION */
+  :is(.testimonial-1, .testimonial-2, .testimonial-3) > p {
+    font-size: 1rem;
+  }
+
+  :is(.testimonial-1, .testimonial-2, .testimonial-3) > button {
+    font-size: 1rem;
+  }
+
+  /* FOOTER */
+
+  :is(footer .info) > h1 {
+    font-size: 1.1rem;
+  }
+
+  :is(footer .sitemap, footer .resources, footer .company, footer .portfolio)
+    > h1 {
+    font-size: 1.1rem;
+  }
+
+  :is(footer .info) > p {
+    font-size: 1rem;
+  }
+
+  :is(footer .sitemap, footer .resources, footer .company, footer .portfolio)
+    > p {
+    font-size: 1rem;
+  }
+
   :is(.first-benefit, .second-benefit) > p {
     font-size: 1rem;
   }
@@ -629,101 +718,24 @@ footer .info {
 }
 
 @media screen and (max-width: 865px) {
-  #top-section .first-article .rating p {
-    font-size: 1rem;
-  }
-
-  #top-section .first-article .article-text {
-    font-size: 1rem;
-  }
-
-  #top-section .first-article .trial #free-trial {
-    font-size: 1rem;
-  }
-
-  #top-section .first-article .trial #examples {
-    font-size: 1rem;
-  }
-
-  :is(.first-benefit, .second-benefit) > p {
-    font-size: 1rem;
-  }
-
   /* SECOND SECTION */
   .second-section {
     padding-inline: 4rem;
   }
 
-  .second-section p:first-child {
-    font-size: 1rem;
-  }
-
-  .second-section .features .first-feature h3,
-  .second-section .features .second-feature h3,
-  .second-section .features .third-feature h3 {
-    font-size: 1.14rem;
-  }
-
-  .second-section .features .first-feature p,
-  .second-section .features .second-feature p,
-  .second-section .features .third-feature p {
-    font-size: 1rem;
-  }
-
   /* THIRD SECTION */
-
   .third-section {
     padding-inline: 4rem;
   }
 
-  .third-section article .third-section-article h2 {
-    font-size: 2rem;
-  }
-
-  .third-section article .third-section-article p {
-    font-size: 1rem;
-  }
-
-  .third-section article .third-section-article a {
-    font-size: 1rem;
-  }
-
   /* FOURTH SECTION */
-
   .fourth-section {
     padding: 0 0 4.5rem 4rem;
   }
 
-  :is(.testimonial-1, .testimonial-2, .testimonial-3) > p {
-    font-size: 1rem;
-  }
-
-  :is(.testimonial-1, .testimonial-2, .testimonial-3) > button {
-    font-size: 1rem;
-  }
-
   /* FOOTER */
-
   footer {
     padding: 2.82rem 4rem 4.5rem;
-  }
-
-  :is(footer .info) > h1 {
-    font-size: 1.2rem;
-  }
-
-  :is(footer .sitemap, footer .resources, footer .company, footer .portfolio)
-    > h1 {
-    font-size: 1.2rem;
-  }
-
-  :is(footer .info) > p {
-    font-size: 1rem;
-  }
-
-  :is(footer .sitemap, footer .resources, footer .company, footer .portfolio)
-    > p {
-    font-size: 1rem;
   }
 }
 
