--- a/index.css
+++ b/index.css
@@ -11,7 +11,8 @@ html {
 }
 
 body {
-  min-height: 100vh;
+  /* min-height: 100vh; */
+  min-width: 100vw;
   font-family: 'Inter', sans-serif;
 }
 
@@ -208,6 +209,7 @@ nav .main-nav .logins .sign-up {
   font-size: 1.2rem;
   font-weight: 700;
   padding-bottom: 1.35rem;
+  width: 10%;
 }
 
 .second-section h1 {
@@ -222,7 +224,7 @@ nav .main-nav .logins .sign-up {
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   justify-content: space-between;
   gap: 2rem;
-  max-height: min-content;
+  width: 100%;
 }
 
 :is(
@@ -230,8 +232,7 @@ nav .main-nav .logins .sign-up {
     .features .second-feature,
     .features .third-feature
   ) {
-  max-width: max-content;
-  max-height: min-content;
+  width: 100%;
 }
 
 .second-section .features .first-feature h3,
@@ -288,7 +289,7 @@ nav .main-nav .logins .sign-up {
 .third-section article .third-section-article p {
   font-size: 1.2rem;
   line-height: 1.4;
-  padding: 1.13em 0 2.25em;
+  padding: 1.13rem 0 2.25rem;
 }
 
 .third-section article .third-section-article a {
@@ -305,12 +306,14 @@ nav .main-nav .logins .sign-up {
 .fourth-section {
   padding: 0 0 4.5rem clamp(2rem, -15.23rem + 27vw, 9rem);
   background: rgb(255, 255, 255);
+  width: 100%;
 }
 
 .fourth-section .testimonials {
   display: flex;
   gap: 3%;
   overflow-x: auto;
+  width: 100%;
 }
 
 .fourth-section .testimonials::-webkit-scrollbar {
@@ -324,6 +327,7 @@ nav .main-nav .logins .sign-up {
   min-width: 31.25rem;
   padding: 1.92rem;
   border-radius: 5px;
+  width: 100%;
 }
 
 :is(.testimonial-1, .testimonial-2, .testimonial-3) > .profile {
@@ -388,18 +392,16 @@ footer {
   padding: 2.82rem clamp(2rem, -15.23rem + 27vw, 9rem) 4.5rem;
   background: rgb(249, 248, 244);
   gap: 2.82rem;
-  max-height: min-content;
+  width: 100%;
 }
 
 footer .info {
   grid-column: 1/3;
-  max-width: max-content;
-  max-height: min-content;
+  width: 100%;
 }
 
 :is(footer .sitemap, footer .resources, footer .company, footer .portfolio) {
-  max-width: max-content;
-  max-height: min-contentg;
+  width: 100%;
 }
 
 :is(footer .info) > h1 {
@@ -525,6 +527,12 @@ footer .info {
   }
 
   /* FOURTH SECTION */
+  .testimonial-1,
+  .testimonial-2,
+  .testimonial-3 {
+    min-width: 25rem;
+  }
+
   :is(.testimonial-1, .testimonial-2, .testimonial-3) > p {
     font-size: 1rem;
   }
@@ -551,16 +559,6 @@ footer .info {
   :is(footer .sitemap, footer .resources, footer .company, footer .portfolio)
     > p {
     font-size: 1rem;
-  }
-
-  :is(.first-benefit, .second-benefit) > p {
-    font-size: 1rem;
-  }
-
-  .testimonial-1,
-  .testimonial-2,
-  .testimonial-3 {
-    min-width: 25rem;
   }
 }
 
@@ -905,7 +903,7 @@ footer .info {
 
   :is(.testimonial-1, .testimonial-2, .testimonial-3) > button {
     width: 100%;
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 
   :is(
